update F02-profile-preferences
